--- a/src/testAPI/testAPI/appsettings.json
+++ b/src/testAPI/testAPI/appsettings.json
@@ -8,13 +8,18 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "",
-    "ApiIdentifier": ""
+    "Domain": "https://iam.bc.dev.americommerce.cloud/",
+    "ApiIdentifier": "api.local"
   },
   "Auth0Management": {
-    "Domain": "",
-    "audience": "",
-    "client_id": "",
-    "client_secret": ""
+    "Domain": "https://cartid-dev.us.auth0.com",
+    "audience": "https://cartid-dev.us.auth0.com/api/v2/",
+    "client_id": "66z1xdbcFRo4q5LezNxdtEclADNpZ7QD",
+    "client_secret": "XzBXOzr8Of5ZctOCXTML4rP2V62LtvRBK3ediNNg2-gc_7XcHour35NPnx6RVVtS"
+  },
+  "CartDatabaseSettings": {
+    "UsersCollectionName": "User",
+    "ConnectionString": "mongodb+srv://uriel:grillote@cluster0.cqbrm.mongodb.net/Movies?retryWrites=true&w=majority",
+    "DatabaseName": "Cart"
   }
 }
