--- a/src/testAPI/testAPI/appsettings.json
+++ b/src/testAPI/testAPI/appsettings.json
@@ -1,25 +1,70 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs", "Serilog.Exceptions", "Serilog.Enrichers.Thread", "Serilog.Enrichers.Process", "Serilog.Enrichers.Environment", "NewRelic.LogEnrichers.Serilog" ]
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Verbose",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}",
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+        }
+      },
+      {
+        "Name": "NewRelicLogs",
+        "Args": {
+          "applicationName": "",
+          "licenseKey": "",
+          "endpointUrl": "https://log-api.newrelic.com/log/v1",
+          "restrictedToMinimumLevel": ""
+        }
+      }
+    ],
+    "Enrich": [
+      "WithExceptionDetails",
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithNewRelicLogsInContext",
+      "WithHttpRequestClientHostIP",
+      "WithHttpRequestClientHostName",
+      "WithHttpRequestId",
+      "WithHttpRequestNumber",
+      "WithHttpRequestRawUrl",
+      "WithHttpRequestTraceId",
+      "WithHttpRequestType",
+      "WithHttpRequestUrl",
+      "WithHttpRequestUrlReferrer",
+      "WithHttpRequestUserAgent",
+      "WithHttpSessionId",
+      "WithUserName"
+    ]
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "https://iam.bc.dev.americommerce.cloud/",
-    "ApiIdentifier": "api.local"
+    "Domain": "",
+    "ApiIdentifier": ""
   },
   "Auth0Management": {
-    "Domain": "https://cartid-dev.us.auth0.com",
-    "audience": "https://cartid-dev.us.auth0.com/api/v2/",
-    "client_id": "66z1xdbcFRo4q5LezNxdtEclADNpZ7QD",
-    "client_secret": "XzBXOzr8Of5ZctOCXTML4rP2V62LtvRBK3ediNNg2-gc_7XcHour35NPnx6RVVtS"
+    "Domain": "",
+    "audience": "",
+    "client_id": "",
+    "client_secret": ""
   },
   "CartDatabaseSettings": {
-    "UsersCollectionName": "User",
-    "ConnectionString": "mongodb+srv://uriel:grillote@cluster0.cqbrm.mongodb.net/Movies?retryWrites=true&w=majority",
-    "DatabaseName": "Cart"
+    "UsersCollectionName": "",
+    "ConnectionString": "",
+    "DatabaseName": ""
+  },
+  "LaunchDarklySettings": {
+    "User": "",
+    "Key": ""
   }
 }
