--- a/src/testAPI/Deployments/development/secret.yaml
+++ b/src/testAPI/Deployments/development/secret.yaml
@@ -4,7 +4,19 @@ metadata:
   name: cart-dev-api-secret
 type: Opaque
 stringData:
-    ASPNETCORE_ENVIRONMENT: Production
-    Auth0__Domain: "iam.bc.dev.americommerce.cloud"
+    Auth0__Domain: ""
     Auth0__ApiIdentifier: "api.local"
-    Auth0Management__Domain: "domain"
+    Auth0Management__Domain: "https://cartid-dev.us.auth0.com"
+    Auth0Management__audience: "https://cartid-dev.us.auth0.com/api/v2/"
+    Auth0Management__client_id: ""
+    Auth0Management__client_secret: ""
+    CartDatabaseSettings__UsersCollectionName: "User"
+    CartDatabaseSettings__ConnectionString: "mongodb+srv://uriel:grillote@cluster0.cqbrm.mongodb.net/Movies?retryWrites=true&w=majority"
+    CartDatabaseSettings__DatabaseName: "Cart"
+    Serilog__WriteTo__1__Args__applicationName : "NewRelicLogTestSample-dev"
+    Serilog__WriteTo__1__Args__licenseKey : "NRII-"
+    Serilog__WriteTo__1__Args__endpointUrl : "https://log-api.newrelic.com/log/v1"
+    Serilog__WriteTo__1__Args__restrictedToMinimumLevel : "Warning"
+    LaunchDarklySettings__User: ""
+    LaunchDarklySettings__Key: ""
+    
