--- a/src/testAPI/Deployments/development/secret.yaml
+++ b/src/testAPI/Deployments/development/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cart-dev-api-secret
+  name: cart-api-secret-dev
 type: Opaque
 stringData:
     Auth0__Domain: ""
@@ -11,7 +11,7 @@ stringData:
     Auth0Management__client_id: ""
     Auth0Management__client_secret: ""
     CartDatabaseSettings__UsersCollectionName: "User"
-    CartDatabaseSettings__ConnectionString: "mongodb+srv://uriel:grillote@cluster0.cqbrm.mongodb.net/Movies?retryWrites=true&w=majority"
+    CartDatabaseSettings__ConnectionString: ""
     CartDatabaseSettings__DatabaseName: "Cart"
     Serilog__WriteTo__1__Args__applicationName : "NewRelicLogTestSample-dev"
     Serilog__WriteTo__1__Args__licenseKey : "NRII-"
