--- a/src/testAPI/Deployments/development/secret.yaml
+++ b/src/testAPI/Deployments/development/secret.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cart-api-secret-dev
+  namespace: default
+  labels:
+    app: cart-api-dev
 type: Opaque
 stringData:
     Auth0__Domain: ""
