--- a/src/testAPI/Deployments/development/service.yaml
+++ b/src/testAPI/Deployments/development/service.yaml
@@ -3,6 +3,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cart-api-service-dev
+  namespace: default
+  labels:
+    app: cart-api-dev
 spec:
   ports:
   - protocol: TCP
