--- a/src/testAPI/Deployments/development/kustomization.yaml
+++ b/src/testAPI/Deployments/development/kustomization.yaml
@@ -1,8 +1,10 @@
 apiVersion : kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: cart-api-np-dev
 
 
 resources :
   - secret.yaml
   - deployment.yaml
   - service.yaml
+  - namespace.yaml
