--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -78,5 +78,5 @@ jobs:
         cd Deployments/development
         ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
         ./kustomize build . | kubectl apply -f -
-        kubectl rollout status deployment/cart-api-dev
+        kubectl rollout status deployment/cart-api-dev --namespace cart-api-np-dev
         kubectl get services -o wide
