--- a/.github/workflows/test_k8s.yml
+++ b/.github/workflows/test_k8s.yml
@@ -80,3 +80,37 @@ jobs:
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/cart-api --namespace cart-api-ns-dev
         kubectl get services -o wide --namespace cart-api-ns-dev
+
+    # Staging
+    # Set up kustomize
+    - name: Set up Kustomize
+      run: |-
+        cd k8s/overlays/stage
+        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+        chmod u+x ./kustomize
+
+    # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |-
+        cd k8s/overlays/stage
+        ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
+        ./kustomize build . | kubectl apply -f -
+        kubectl rollout status deployment/cart-api --namespace cart-api-ns-staging
+        kubectl get services -o wide --namespace cart-api-ns-staging
+
+    #prod
+    # Set up kustomize
+    - name: Set up Kustomize
+      run: |-
+        cd k8s/overlays/main
+        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+        chmod u+x ./kustomize
+
+    # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |-
+        cd k8s/overlays/main
+        ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
+        ./kustomize build . | kubectl apply -f -
+        kubectl rollout status deployment/cart-api --namespace cart-api-ns-prod
+        kubectl get services -o wide --namespace cart-api-ns-prod
