--- a/src/testAPI/k8s/base/service.yaml
+++ b/src/testAPI/k8s/base/service.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cart-api
+  name: cart-authorization-api
   namespace: default
   labels:
-    app: cart-api
+    app: cart-authorization-api
 spec:
   ports:
   - protocol: TCP
     port: 80
   selector:
-    app: cart-api
+    app: cart-authorization-api
   type: LoadBalancer
   loadBalancerIP: ""
