--- a/src/testAPI/k8s/overlays/develop/kustomization.yaml
+++ b/src/testAPI/k8s/overlays/develop/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cart-api-ns-dev
+namespace: cart-authorization-api-dev
 commonLabels:
-  app: cart-api-dev
+  app: cart-authorization-api
 
 bases: 
 - ../../base
