--- a/src/testAPI/k8s/overlays/develop/secret.yaml
+++ b/src/testAPI/k8s/overlays/develop/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cart-api-secret-dev
+  name: authorization-secrets
   namespace: default
   labels:
-    app: cart-api
+    app: cart-authorization-api
 type: Opaque
 stringData:
     Auth0__Domain: ""
