--- a/src/testAPI/k8s/overlays/stage/kustomization.yaml
+++ b/src/testAPI/k8s/overlays/stage/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cart-api-ns-staging
+namespace: cart-authorization-api-stage
 commonLabels:
-  app: cart-api-staging
+  app: cart-authorization-api
 
 bases: 
 - ../../base
