--- a/.github/workflows/testHelmD.yml
+++ b/.github/workflows/testHelmD.yml
@@ -84,5 +84,5 @@ jobs:
       id: install
 
     # Deploy latest version
-    - run: helm upgrade -f ./identity-api/values-dev.yaml --set deployment.image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA identity-api identity-api
+    - run: helm upgrade --install -f ./identity-api/values-dev.yaml --set deployment.image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA identity-api identity-api
 
