--- a/kubernetes/helm/identity-api/templates/secret.yaml
+++ b/kubernetes/helm/identity-api/templates/secret.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 stringData:
     Auth0__Domain: ""
