--- a/kubernetes/helm/identity-api/templates/service.yaml
+++ b/kubernetes/helm/identity-api/templates/service.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   ports:
   - protocol: TCP
