--- a/kubernetes/helm/identity-api/templates/deployment.yaml
+++ b/kubernetes/helm/identity-api/templates/deployment.yaml
@@ -9,18 +9,15 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: {{ .Values.name }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
-      app.kubernetes.io/managed-by: {{ .Release.Service }}
+  replicas: 1
   template:
     metadata:
       labels:
         app: {{ .Values.name }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/managed-by: {{ .Release.Service }}
+    spec:
       containers:
       - name: {{ .Values.name }}
         image: {{ .Values.deployment.image }}
