--- a/kubernetes/helm/identity-api/templates/configmap.yaml
+++ b/kubernetes/helm/identity-api/templates/configmap.yaml
@@ -27,7 +27,7 @@ data:
             }
           },
           {
-            "Name": "NewRelicLogs",
+            "Name": "NewRelic",
             "Args": {
               "applicationName": "identity-api-dev",
               "licenseKey": "",
