--- a/kubernetes/helm/identity-api/templates/configmap.yaml
+++ b/kubernetes/helm/identity-api/templates/configmap.yaml
@@ -6,77 +6,7 @@ metadata:
   labels:
     app: {{ .Values.name }}
 data:
-  appsettings.json: |-
-    {
-      "Serilog": {
-        "MinimumLevel": {
-          "Default": "Information",
-          "Override": {
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-          },
-          "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs", "Serilog.Exceptions", "Serilog.Enrichers.Thread", "Serilog.Enrichers.Process", "Serilog.Enrichers.Environment", "NewRelic.LogEnrichers.Serilog" ]
-        },
-        "WriteTo": [
-          {
-            "Name": "Console",
-            "Args": {
-              "restrictedToMinimumLevel": "Verbose",
-              "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}",
-              "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
-            }
-          },
-          {
-            "Name": "NewRelic",
-            "Args": {
-              "applicationName": "identity-api-dev",
-              "licenseKey": "",
-              "endpointUrl": "https://log-api.newrelic.com/log/v1",
-              "restrictedToMinimumLevel": "warning"
-            }
-          }
-        ],
-        "Enrich": [
-          "WithExceptionDetails",
-          "FromLogContext",
-          "WithMachineName",
-          "WithThreadId",
-          "WithNewRelicLogsInContext",
-          "WithHttpRequestClientHostIP",
-          "WithHttpRequestClientHostName",
-          "WithHttpRequestId",
-          "WithHttpRequestNumber",
-          "WithHttpRequestRawUrl",
-          "WithHttpRequestTraceId",
-          "WithHttpRequestType",
-          "WithHttpRequestUrl",
-          "WithHttpRequestUrlReferrer",
-          "WithHttpRequestUserAgent",
-          "WithHttpSessionId",
-          "WithUserName"
-        ]
-      },
-      "AllowedHosts": "*",
-      "Auth0": {
-        "Domain": "Domain",
-        "ApiIdentifier": "ApiIdentifier"
-      },
-      "Auth0Management": {
-        "Domain": "-Domain",
-        "audience": "-audience",
-        "client_id": "-client_id",
-        "client_secret": "-client_secret"
-      },
-      "CartDatabaseSettings": {
-        "UsersCollectionName": "-",
-        "ConnectionString": "-",
-        "DatabaseName": "-"
-      },
-      "LaunchDarklySettings": {
-        "User": "-",
-        "Key": "-"
-      }
-    }
-
-  
-  
+  ASPNETCORE_ENVIRONMENT: {{ .Values.ConfigMap.data.ASPNETCORE_ENVIRONMENT }}    
+  Serilog__WriteTo__1__Args__applicationName : {{ .Values.ConfigMap.data.Serilog__WriteTo__1__Args__applicationName }}
+  Serilog__WriteTo__1__Args__endpointUrl : {{ .Values.ConfigMap.data.Serilog__WriteTo__1__Args__endpointUrl }}
+  Serilog__WriteTo__1__Args__restrictedToMinimumLevel : {{ .Values.ConfigMap.data.Serilog__WriteTo__1__Args__restrictedToMinimumLevel }}
