--- a/src/testAPI/testAPI/appsettings.json
+++ b/src/testAPI/testAPI/appsettings.json
@@ -1,1 +1,70 @@
-{}
+{
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs", "Serilog.Exceptions", "Serilog.Enrichers.Thread", "Serilog.Enrichers.Process", "Serilog.Enrichers.Environment", "NewRelic.LogEnrichers.Serilog" ]
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Verbose",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}",
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+        }
+      },
+      {
+        "Name": "NewRelicLogs",
+        "Args": {
+          "applicationName": "-",
+          "licenseKey": "-",
+          "endpointUrl": "https://log-api.newrelic.com/log/v1",
+          "restrictedToMinimumLevel": "-"
+        }
+      }
+    ],
+    "Enrich": [
+      "WithExceptionDetails",
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithNewRelicLogsInContext",
+      "WithHttpRequestClientHostIP",
+      "WithHttpRequestClientHostName",
+      "WithHttpRequestId",
+      "WithHttpRequestNumber",
+      "WithHttpRequestRawUrl",
+      "WithHttpRequestTraceId",
+      "WithHttpRequestType",
+      "WithHttpRequestUrl",
+      "WithHttpRequestUrlReferrer",
+      "WithHttpRequestUserAgent",
+      "WithHttpSessionId",
+      "WithUserName"
+    ]
+  },
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "-",
+    "ApiIdentifier": "-"
+  },
+  "Auth0Management": {
+    "Domain": "-",
+    "audience": "-",
+    "client_id": "-",
+    "client_secret": "-"
+  },
+  "CartDatabaseSettings": {
+    "UsersCollectionName": "-",
+    "ConnectionString": "-",
+    "DatabaseName": "-"
+  },
+  "LaunchDarklySettings": {
+    "User": "-",
+    "Key": "-"
+  }
+}
