--- a/kubernetes/helm/identity-api/values-dev.yaml
+++ b/kubernetes/helm/identity-api/values-dev.yaml
@@ -8,9 +8,7 @@ ConfigMap:
   name: authorization-config
   data: 
     ASPNETCORE_ENVIRONMENT: Development
-    Serilog__WriteTo__1__Args__applicationName : identity-api-dev
-    Serilog__WriteTo__1__Args__endpointUrl : https://log-api.newrelic.com/log/v1
-    Serilog__WriteTo__1__Args__restrictedToMinimumLevel : Warning
+    ASPNETCORE_URLS: https://+:443;http://+:80
 
 Secret:
   name: authorization-secrets
