--- a/kubernetes/helm/identity-api/templates/service.yaml
+++ b/kubernetes/helm/identity-api/templates/service.yaml
@@ -8,8 +8,14 @@ metadata:
     app: {{ .Values.name }}
 spec:
   ports:
-  - protocol: TCP
+  - name: http
+    protocol: TCP
     port: 80
+    targetPort: 80
+  - name: https
+    protocol: TCP
+    port: 443
+    targetPort: 443
   selector:
     app: {{ .Values.name }}
   type: LoadBalancer
