--- a/kubernetes/helm/identity-api/templates/deployment.yaml
+++ b/kubernetes/helm/identity-api/templates/deployment.yaml
@@ -25,6 +25,9 @@ spec:
         - name: http
           containerPort: 80
           protocol: TCP
+        - name: https
+          containerPort: 443
+          protocol: TCP
         envFrom:
           - configMapRef: 
               name: {{ .Values.ConfigMap.name }}
