--- a/kubernetes/helm/identity-api/templates/service.yaml
+++ b/kubernetes/helm/identity-api/templates/service.yaml
@@ -12,6 +12,11 @@ spec:
     protocol: TCP
     port: 80
     targetPort: 80
+  - name: https
+    protocol: TCP
+    port: 443
+    targetPort: 443
   selector:
     app: {{ .Values.name }}
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: ""
