--- a/kubernetes/helm/identity-api/templates/ingress.yaml
+++ b/kubernetes/helm/identity-api/templates/ingress.yaml
@@ -9,8 +9,10 @@ metadata:
     networking.gke.io/managed-certificates: hcobian-api-dev
     kubernetes.io/ingress.class: "gce"
 spec:
-  defaultBackend:
-    service:
-      name: {{ .Values.name }}
-      port:
-        number: 80
+  rules:
+  - http:
+      paths:
+      - path: /*
+        backend:
+          serviceName: {{ .Values.name }}
+          servicePort: 80
