--- a/kubernetes/helm/identity-api/templates/deployment.yaml
+++ b/kubernetes/helm/identity-api/templates/deployment.yaml
@@ -28,6 +28,16 @@ spec:
         - name: https
           containerPort: 443
           protocol: TCP
+        readinessProbe:
+          tcpSocket:
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 20
         envFrom:
           - configMapRef: 
               name: {{ .Values.ConfigMap.name }}
