--- a/kubernetes/helm/identity-api/templates/deployment.yaml
+++ b/kubernetes/helm/identity-api/templates/deployment.yaml
@@ -29,13 +29,13 @@ spec:
           containerPort: 443
           protocol: TCP
         readinessProbe:
-          tcpSocket:
+          httpGet:
             path: /health
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 10
         livenessProbe:
-          tcpSocket:
+          httpGet:
             path: /health
             port: 80
           initialDelaySeconds: 5
