--- a/kubernetes/helm/identity-api/templates/configmap.yaml
+++ b/kubernetes/helm/identity-api/templates/configmap.yaml
@@ -8,4 +8,4 @@ metadata:
 data:
   ASPNETCORE_ENVIRONMENT: {{ .Values.ConfigMap.data.ASPNETCORE_ENVIRONMENT }}  
   ASPNETCORE_URLS: {{ .Values.ConfigMap.data.ASPNETCORE_URLS }}  
-  ASPNETCORE_FORWARDEDHEADERS_ENABLED: {{ .Values.ConfigMap.data.ASPNETCORE_FORWARDEDHEADERS_ENABLED }}
+  ASPNETCORE_FORWARDEDHEADERS_ENABLED : "true"
